{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Shooting",
            "id": "32570a18-dea7-40c6-adb7-e20ebc7fed64",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Value",
                    "id": "597ccb2d-c458-45dd-a0f6-413e3c9183ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.02)",
                    "initialStateCheck": true
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "b816c124-c9c1-44d6-b0fb-baa86eeede8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AutoShoot",
                    "type": "Button",
                    "id": "68cab590-3573-432c-8e56-e5bf07eb3d27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a47899c-8eb1-4140-956b-2be13fc55974",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16c87593-1502-4445-b55d-d36b522be49b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e053c8f5-3e0d-4af1-beac-bcf17eab9e93",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "762ce5ec-e7c1-4c54-a7cb-6ea390d52f68",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WeaponSwitch",
            "id": "1b327678-08cb-495e-97db-6f8800b8ab33",
            "actions": [
                {
                    "name": "SetPistol",
                    "type": "Button",
                    "id": "89f2d6f0-40e0-48d5-8913-19715d811760",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetShotgun",
                    "type": "Button",
                    "id": "84aa4292-00ac-4dc6-a3f0-23928030f51d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetMachineGun",
                    "type": "Button",
                    "id": "dfadbe25-021a-46c2-bb0b-d23a2aa0f037",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9019ee4d-3d54-4389-824d-e87960fbb4a8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetPistol",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71121bf2-c7e7-4668-9833-85478bf0cb10",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetShotgun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4162a6e2-f590-4836-a23d-6f5415473e13",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetMachineGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuControl",
            "id": "bf44112c-7406-44dc-886e-4f4e9abc59ab",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "76f30088-460a-4fc8-8d34-cd2dea4ab210",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EscapeMenu",
                    "type": "Button",
                    "id": "2b031123-c5ae-4d51-9216-cbde4b6b92a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpgradeMenu",
                    "type": "Button",
                    "id": "322fe449-4cbe-4473-835f-83113874a1cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4a6d6e6-0b8d-4d7c-a3fd-f7c59336f1a2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9defb201-3576-4493-8448-14a7001ffc23",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EscapeMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c72d1543-4696-40d9-910b-dcf8e9753478",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpgradeMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}